[package]

name = "roots"
version = "0.0.2"
authors = ["Mikhail Vorotilov <mikhail.vorotilov@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/vorot/roots"
description = """
Library of well known algorithms for numerical root finding.
"""
readme = "README.md"
keywords = [ "math", "root", "numerical", "cubic", "quartic" ]

[lib]
name = "roots"
path = "src/lib.rs"
